namespace Nestin.Core.Dtos.Locations
{
    public class LocationDto
    {
        public int Id { get; set; }
        public string Name { get; set; }
        public int CountryId { get; set; }
    }
}
